tooling/nargo_cli/tests/snapshots/compile_failure/builtin_function_declaration/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Definition of low-level function outside of standard library
  ┌─ src/main.nr:4:1
  │
4 │ #[builtin(to_le_bits)]
  │ ---------------------- Usage of the `#[foreign]` or `#[builtin]` function attributes are not allowed outside of the Noir standard library
  │

Aborting due to 1 previous error
